--- a/aspidpartners/css/style.css
+++ b/aspidpartners/css/style.css
@@ -1653,6 +1653,9 @@ body::after {
   display: grid;
   grid-template-columns: repeat(auto-fit,minmax(22rem,1fr))
 }
+.traffic__content--hidden {
+  overflow: hidden
+}
 .traffic__actions {
   display: flex;
   justify-content: center
