--- a/aspidpartners/css/style.css
+++ b/aspidpartners/css/style.css
@@ -18,7 +18,6 @@
 .column-services__item::before,
 .column-tabs__item::before,
 .menu-breadcrumb__item:not(:last-child)::after,
-.menu__select .select .select__value:after,
 .select__value:after,
 [class*=_icon-]::before {
   font-family: icons;
@@ -480,47 +479,6 @@ textarea.form-contact-us__input {
 }
 ._select-tag {
   cursor: pointer
-}
-.menu__select .select .select__title {
-  font-family: Inter;
-  font-weight: 500;
-  font-size: 1rem;
-  line-height: 150%;
-  color: #000;
-  background-color: #f1f3fc;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  border-radius: 1rem;
-  text-transform: uppercase;
-  transition: all .5s
-}
-.menu__select .select .select__value:after {
-  content: "";
-  color: #1c1b1f;
-  align-self: stretch;
-  flex: 0 0 10px;
-  transition: color .5s;
-  display: flex;
-  justify-content: center;
-  align-items: center
-}
-._select-open .menu__select .select .select__value:after {
-  -webkit-transform: rotate(-180deg);
-  transform: rotate(-180deg)
-}
-.menu__select .select .select__options {
-  color: #000;
-  position: absolute;
-  top: calc(100% - .0625rem);
-  background-color: #fff;
-  padding: .625rem;
-  border-radius: 1rem;
-  min-width: 100%;
-  left: 0;
-  border-top: 0;
-  border: .0625rem solid rgba(67,83,116,.5);
-  border-top: 0
 }
 .menu__list {
   display: flex;
@@ -1047,9 +1005,9 @@ body::after {
   z-index: 50;
   width: 100%;
   padding-top: 2rem;
-  transition: background-color .5s,-webkit-transform .5s;
-  transition: background-color .5s,transform .5s;
-  transition: background-color .5s,transform .5s,-webkit-transform .5s
+  transition: background-color .5s,padding-top .5s,-webkit-transform .5s;
+  transition: background-color .5s,transform .5s,padding-top .5s;
+  transition: background-color .5s,transform .5s,padding-top .5s,-webkit-transform .5s
 }
 .header._header-scroll .header__container {
   border-radius: 0 0 1rem 1rem;
@@ -1326,6 +1284,14 @@ body::after {
 .card-verticals--main {
   background-color: #435374
 }
+.card-verticals--main .card-verticals__image {
+  display: grid;
+  width: 14.4375rem;
+  height: 14.4375rem
+}
+.card-verticals--main .card-verticals__image:not(:last-child) {
+  margin-bottom: 1rem
+}
 .card-verticals--main .card-verticals__title {
   color: #fff
 }
@@ -1335,8 +1301,24 @@ body::after {
 .card-verticals--white {
   background-color: #fff
 }
+.card-verticals--white .card-verticals__image {
+  display: grid;
+  width: 14.4375rem;
+  height: 14.4375rem
+}
+.card-verticals--white .card-verticals__image:not(:last-child) {
+  margin-bottom: 1rem
+}
 .card-verticals--blue {
   background-color: #1848da
+}
+.card-verticals--blue .card-verticals__image {
+  display: grid;
+  width: 14.4375rem;
+  height: 14.4375rem
+}
+.card-verticals--blue .card-verticals__image:not(:last-child) {
+  margin-bottom: 1rem
 }
 .card-verticals--blue .card-verticals__title {
   color: #fff
@@ -1351,6 +1333,11 @@ body::after {
   flex-direction: row;
   gap: 1rem;
   background-color: #456ebe
+}
+.card-verticals--color .card-verticals__image {
+  display: grid;
+  width: 10rem;
+  height: 10rem
 }
 .card-verticals--color .card-verticals__title {
   color: #fff
@@ -1369,13 +1356,10 @@ body::after {
   grid-column: 3/4;
   background-color: #cfd8fe
 }
-.card-verticals__image {
+.card-verticals--light .card-verticals__image {
   display: grid;
-  width: 14.4375rem;
-  height: 14.4375rem
-}
-.card-verticals__image:not(:last-child) {
-  margin-bottom: 1rem
+  width: 10rem;
+  height: 10rem
 }
 .card-verticals__content {
   display: grid
@@ -4354,6 +4338,26 @@ body::after {
     margin-bottom: 1.5rem
   }
 }
+@media (max-width:104.375em) {
+  .card-verticals--color .card-verticals__image:not(:last-child) {
+    margin-bottom: 1rem
+  }
+  .card-verticals--color {
+    grid-column: auto;
+    width: auto;
+    display: grid
+  }
+  .card-verticals--light {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    grid-column: auto;
+    width: auto;
+    display: grid
+  }
+  .card-verticals--light .card-verticals__image:not(:last-child) {
+    margin-bottom: 1rem
+  }
+}
 @media (max-width:102.5em) {
   .header {
     padding-left: .9375rem;
@@ -4392,19 +4396,23 @@ body::after {
   }
 }
 @media (max-width:71.25em) {
-  .card-verticals--color {
-    grid-column: auto;
-    width: auto;
-    display: grid
+  .card-verticals--main .card-verticals__image {
+    width: 7.5rem;
+    height: 7.5rem
   }
-  .card-verticals--light {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-    grid-column: auto;
-    width: auto;
-    display: grid
+  .card-verticals--white .card-verticals__image {
+    width: 7.5rem;
+    height: 7.5rem
   }
-  .card-verticals__image {
+  .card-verticals--blue .card-verticals__image {
+    width: 7.5rem;
+    height: 7.5rem
+  }
+  .card-verticals--color .card-verticals__image {
+    width: 7.5rem;
+    height: 7.5rem
+  }
+  .card-verticals--light .card-verticals__image {
     width: 7.5rem;
     height: 7.5rem
   }
@@ -4518,9 +4526,6 @@ body::after {
   .menu-open .menu__body::before {
     left: 0
   }
-  .menu__select:not(:last-child) {
-    margin-bottom: 1.25rem
-  }
   .menu__list {
     flex-direction: column;
     align-items: flex-start;
@@ -4612,20 +4617,16 @@ body::after {
     margin-bottom: 1rem
   }
   .header {
-    padding-top: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-    padding-right: 0
+    padding-top: .9375rem
   }
-  .header._header-scroll .header__container {
-    border-radius: 0
+  .header._header-scroll {
+    padding-top: 0
   }
   .header__container {
     grid-template-columns: 1fr auto;
     gap: 1.875rem;
     min-height: 3.125rem;
-    padding-bottom: .625rem;
-    border-radius: 0
+    padding-bottom: .625rem
   }
   .header__logo {
     padding-bottom: 0
@@ -5833,13 +5834,6 @@ body::after {
   }
   .select__option:hover {
     background-color: #f1f3fc
-  }
-  .menu__select .select .select__title:hover {
-    background-color: #1848da;
-    color: #fff
-  }
-  .menu__select .select .select__value:hover::after {
-    color: #fff
   }
   .menu__item:hover .sub-menu {
     opacity: 1;
